--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,5 @@
 header {
-  background-image: url(/images/header-background.jpg);
+  background-image: url(../images/header-background.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
